--- a/client/src/index.css
+++ b/client/src/index.css
@@ -116,9 +116,8 @@ button:active .top::before {
   text-align: center;
 }
 .box-first {
-  height: 100px;
+  height: 20px;
   width: 100px;
-  background-color: green;
   display: flex;
   gap: 0px;
   margin-top: 10px;
@@ -126,10 +125,13 @@ button:active .top::before {
 .box-second {
   height: 100px;
   width: 100px;
-  background-color: green;
   display: flex;
   gap: 0px;
   margin-top: 10px;
+}
+.box-third {
+  height: 100px;
+  width: 100%;
 }
 .mark {
   height: 100%;
